--- a/manifest.json
+++ b/manifest.json
@@ -7,36 +7,21 @@
   "theme_color": "#39536b",
   "icons": [
     {
-      "src": "img/icon-72x72.png",
-      "sizes": "72x72"
+      "src": "favicon.ico",
+      "sizes": "16x16",
+      "type": "image/x-icon"
     },
     {
-      "src": "img/icon-96x96.png",
-      "sizes": "96x96"
+      "src": "apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
-      "src": "img/icon-128x128.png",
-      "sizes": "128x128"
-    },
-    {
-      "src": "img/icon-144x144.png",
-      "sizes": "144x144"
-    },
-    {
-      "src": "img/icon-152x152.png",
-      "sizes": "152x152"
-    },
-    {
-      "src": "img/icon-192x192.png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "img/icon-384x384.png",
-      "sizes": "384x384"
-    },
-    {
-      "src": "img/icon-512x512.png",
-      "sizes": "512x512"
+      "src": "maskable_icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "scope": "/",
