--- a/manifest.json
+++ b/manifest.json
@@ -1,74 +1,21 @@
 {
-  "name": "Calculadora PWA",
-  "short_name": "Calculadora",
-  "start_url": "/",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "display": "standalone",
-  "icons": [
-    {
-      "src": "images/icon-72x72.png",
-      "sizes": "72x72"
-    },
-    {
-      "src": "images/icon-96x96.png",
-      "sizes": "96x96"
-    },
-    {
-      "src": "images/icon-128x128.png",
-      "sizes": "128x128"
-    },
-    {
-      "src": "images/icon-144x144.png",
-      "sizes": "144x144"
-    },
-    {
-      "src": "images/icon-152x152.png",
-      "sizes": "152x152"
-    },
-    {
-      "src": "images/icon-192x192.png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "images/icon-384x384.png",
-      "sizes": "384x384"
-    },
-    {
-      "src": "images/icon-512x512.png",
-      "sizes": "512x512"
-    }
-  ],
-  "lang": "es-ES",
-  "scope": "/",
-  "theme_display": "light",
-  "description": "Calculadora PWA simple y fácil de usar",
-  "workbox": {
-    "precache": [
-      {
-        "url": "/",
-        "strategy": "cacheFirst"
-      },
-      {
-        "url": "/index.html",
-        "strategy": "cacheFirst"
-      },
-      {
-        "url": "/manifest.json",
-        "strategy": "cacheFirst"
-      },
-      {
-        "url": "/sw-precache.js",
-        "strategy": "cacheFirst"
-      },
-      {
-        "url": "/scripts/calculadora.js",
-        "strategy": "cacheFirst"
-      },
-      {
-        "url": "/styles/app.css",
-        "strategy": "cacheFirst"
-      }
+    "name": "Calculadora PWA",
+    "short_name": "CalcPWA",
+    "description": "Una calculadora PWA con funciones avanzadas",
+    "start_url": ".",
+    "display": "standalone",
+    "background_color": "#121212",
+    "theme_color": "#333333",
+    "icons": [
+        {
+            "src": "icon.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icon.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
     ]
-  }
 }
