--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "description": "Una calculadora PWA con funciones avanzadas",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#121212",
-    "theme_color": "#333333",
+    "background_color": "#0a0a23",
+    "theme_color": "#0a0a23",
     "icons": [
         {
             "src": "icon.png",
