--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,9 @@
     "description": "Una calculadora PWA con funciones avanzadas",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0a0a23",
-    "theme_color": "#0a0a23",
+    "background_color": "#0a192f",
+    "theme_color": "#0a192f",
     "icons": [
         {
             "src": "icon.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        }
-    ]
-}
+            "sizes": "192
