--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,13 @@
     "name": "Calculadora PWA",
     "short_name": "CalcPWA",
     "description": "Una calculadora PWA con funciones avanzadas",
-    "start_url": ".",
+    "start_url": "/",
     "display": "standalone",
-    "background_color": "#0a192f",
-    "theme_color": "#0a192f",
+    "background_color": "#000000",
+    "theme_color": "#0066cc",
     "icons": [
         {
             "src": "icon.png",
-            "sizes": "192
+            "sizes": "192x192",
+            "type": "image/png"
+        },
