--- a/manifest.json
+++ b/manifest.json
@@ -2,18 +2,18 @@
     "name": "Calculadora PWA",
     "short_name": "CalcPWA",
     "description": "Una calculadora PWA con funciones avanzadas",
-    "start_url": "/",
+    "start_url": "/calculator/",
     "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#0066cc",
     "icons": [
         {
-            "src": "icon-192x192.png",
+            "src": "/calculator/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icon-512x512.png",
+            "src": "/calculator/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
