--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,14 @@
     "name": "Calculadora PWA",
     "short_name": "CalcPWA",
     "description": "Una calculadora PWA con funciones avanzadas",
-    "start_url": "/calculator/",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#0066cc",
     "icons": [
         {
-            "src": "/calculator/icon-192x192.png",
+            "src": "icon.png",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/calculator/icon-512x512.png",
-            "sizes": "512x512",
             "type": "image/png"
         }
     ]
