--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
     "name": "Calculadora PWA",
-    "short_name": "CalcPWA",
-    "start_url": ".",
+    "short_name": "Calculadora",
+    "description": "Una calculadora progresiva web con funciones básicas y avanzadas.",
+    "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#000000",
-    "theme_color": "#000000",
-    "description": "Una calculadora PWA con funciones adicionales.",
+    "theme_color": "#003366",
     "icons": [
         {
-            "src": "icon-192.png",
+            "src": "./icon-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icon-512.png",
+            "src": "./icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
